tests/fixtures/errors/domain_violation.gcl
// domain_violation.gcl -- value out of bounds
param mass: Mass(min: 100.0 kg, max: 2000.0 kg) = 5000.0 kg;
